--- a/homework_BuhOne /style.css
+++ b/homework_BuhOne /style.css
@@ -174,6 +174,7 @@ line-height: 50px;
     font-size: 24px;
     color: #ffffff;
   }
+/* ------------------------------- */
 
   .repeatImg {
     position: relative;
@@ -293,39 +294,51 @@ color: #005FA3;
 ________________________________ */
 .our_clients{
   background: #EBEBEB;
+  padding: 140px, 0;
 }
+
+.container {
+  margin: 0 auto;
+  width: 1110px;
+  overflow: hidden;
+}
+
 .clients_item h4 {
   color: #BDBDBD;
     font-size: 24px;
-    font-weight: 900px;
+    font-weight: 700px;
     margin-bottom: 40px;
 }
 .clients_item{
   display: flex;
   flex-direction: column;
-  gap: 30px;
-  padding: 130px 0;
+  padding:  100px, 0;
+  margin-top: 60px;
+  
 }
 .wraper_clients h2{
     color: #333333;
     font-size: 48px;
     font-weight: 900px;
-    margin-bottom: 60px;
+    margin-bottom: 80px;
     font-family: 'Merriweather';
 }
 
 .slaider_clients{
-  padding-bottom: 80px;
+  display: flex;
+  width: 4440px;
+  transition: all .5s ease;
+  margin-bottom: 50px;
 }
 
 .slider_line{
 display: flex;
-justify-content: space-between;
 gap: 30px;
-width: 255px;
-height: 130px;
 }
 
+.clients_icons {
+  height: 200px;
+}
 .button_slider_clients{
   display: flex;
   justify-content: flex-end;
@@ -374,6 +387,7 @@ border: none;
   border: none;
   border-radius: 50%;
   cursor: pointer;
+  background-color: rgba(0, 95, 163, 1);
 }
 
 .b_slider_next:hover,
